add user nickname setting
